--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,2 +1,13 @@
-<h1> This is the index </h1>
+<!DOCTYPE html>
+<%= render 'layouts/header' %>
 
+  <body>
+    <h1>
+      Products
+    </h1>
+
+    <h2>
+        <%= link_to 'Products', products_url %>
+        
+    </h2>
+  </body>
