added customer scaffold

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -17,5 +17,15 @@
     <div id="add_products">
         <%= render 'layouts/add_products' %>
     </div>
+
+    <div id="sell_products_button">
+        <button class="btn btn-primary"> Sale </button>
+    </div>
+
+    <div id="sell_products">
+        <%= render 'layouts/sell_products' %>
+    </div>
+
+
     
 </body>
