added js to view inventory and customers

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -5,24 +5,32 @@
     <div id="show_products_button">
         <button class="btn btn-primary"> View Inventory </button>
     </div>
-
+    <br/>
     <div id="show_products">
         <%= render 'layouts/all_products'%>
     </div>
-
+    <br/>
     <div id="add_products_button">
         <button class="btn btn-primary"> Add Inventory </button>
     </div>
-
+    <br/>
     <div id="add_products">
         <%= render 'layouts/add_products' %>
     </div>
-
+    <br/>
     <div id="sell_products_button">
         <button class="btn btn-primary"> Sale </button>
     </div>
-
+    <br/>
     <div id="sell_products">
         <%= render 'layouts/sell_products' %>
+    </div>
+    <br/>
+    <div id="show_customers_button">
+        <button class="btn btn-primary"> Customers </button>
+    </div>
+    <br/>
+    <div id="show_customers">
+        <%= render 'layouts/view_customer'%>
     </div>
 </body>
