--- a/app/views/layouts/_view_customer.html.erb
+++ b/app/views/layouts/_view_customer.html.erb
@@ -18,7 +18,7 @@
         <h3> No customers to show :( </h3>
         <% link_to root_path %>
     <% end %>
-    <div id="close_products_button">
+    <div id="close_customers_button">
         <button class="btn btn-primary">Close</button>
     </div>
 </table>
