--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -33,4 +33,8 @@
     <div id="show_customers">
         <%= render 'layouts/view_customer'%>
     </div>
+    <br/>
+    <div id="new_customers">
+        <%= render 'layouts/new_customer'%>
+    </div>
 </body>
