added customer partial in products view!

--- a/app/views/layouts/_new_customer.html.erb
+++ b/app/views/layouts/_new_customer.html.erb
@@ -1,5 +1,5 @@
 <div>
-    <%= form_for Customer.new do |cu| %>
+    <%= form_for @customer do |cu| %>
         <%= cu.label :first_name %>
         <%= cu.text_field :first_name %>
 
