removed uneccesary render in products index

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -38,6 +38,6 @@
         <button class="btn btn-primary"> New Customer </button>
     </div>
     <div id="new_customer">
-        <%= render 'layouts/new_customer', :locals => { :customer => Customer.new } %>
+        <%= render 'layouts/new_customer' %>
     </div>
 </body>
