added search route

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -3,6 +3,9 @@
 </header>
 <body>
     
+    <div id="search_field">
+        <%= form_for%>
+    </div>
     <div id="show_products_button">
         <button class="btn btn-primary"> View Inventory </button>
     </div>
