--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -4,7 +4,7 @@
 <body>
 
 
-    <%= form_with url: autocomplete_path, local: true, method: :get, html: { class: "form"} do |form| %>
+    <%= form_with url: autocomplete_path, local: true, method: :get do |form| %>
         <%= form.text_field :q, placeholder: "Search", data: { id: "autocomplete" } %>
         <%= form.button "Search", class: "btn btn-primary" %>
     <% end %>
