forget autocompelte,  rendering json myself

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -3,13 +3,16 @@
 </header>
 <body>
 
+    <div id="search-form">
+        <%= form_with url: autocomplete_path, local: true, method: :get do |form| %>
+            <%= form.text_field :q, placeholder: "Search", data: { id: "autocomplete" } %>
+            <%= form.button "Search", class: "btn btn-primary" %>
+        <% end %>
+    </div>
 
-    <%= form_with url: autocomplete_path, local: true, method: :get do |form| %>
-        <%= form.text_field :q, placeholder: "Search", data: { id: "autocomplete" } %>
-        <%= form.button "Search", class: "btn btn-primary" %>
-    <% end %>
+    <div id="search-results">
 
-
+    </div>
     <br />
 
     <div id="show_products_button">
